fixed contact tab to hide on mobile and to act as trigger for contact trigger when visble on desktop

--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -11,6 +11,9 @@ nav {
     /* box-shadow: 13px 13px 23px 3px rgba(0,0,0,0.72); */
 }
 
+.sidenav-trigger {
+    line-height: 0px;
+}
 .contactIcon {
     position: relative;
     top:-10px;
